Improved code readability; Added search interface;